# GEMM

./: .gitignore  README.md  build.sh  correctness.c  dgemm.h  env.sh  main.c
cpu_serial/: README.md  correctness.c  dgemm.h  run.sh
cpu_serial/src/: dgemm_mypack.c  dgemm_naive.c  dgemm_openblas.c  dgemm_v1.c  dgemm_v2.c  dgemm_v3.c  dgemm_v4.c  util.c
cuda/: CMakeLists.txt  README.md  env.sh  main.cu
cuda/src/: dgemm.cuh  utils.cu  utils.cuh
cuda/src/kernels/: 00_dgemm_cublas.cu  01_dgemm_naive.cu  02_dgemm_ideal.cu  03_dgemm_shmem.cu  04_dgemm_warp_tiling.cu
hgemm-tensorcore/: CMakeLists.txt  README.md  main.cu
hgemm-tensorcore/include/: gemm.cuh  utils.cuh
hgemm-tensorcore/result/: performance.csv
hgemm-tensorcore/scripts/: benchmark.sh  process_data.py
hgemm-tensorcore/src/: utils.cu
hgemm-tensorcore/src/kernels/: k00_cublas.cu  k01_fake.cu  (+11 more)
hsgemm-tensorcore/: CMakeLists.txt  README.md  main.cu
hsgemm-tensorcore/include/: gemm.cuh  utils.cuh
hsgemm-tensorcore/src/: utils.cu
hsgemm-tensorcore/src/kernels/: k00_cublas.cu  k01_fake.cu  k02_naive.cu  k03_wmma_shmem.cu  k04_wmma_shmem_opt.cu  k05_wmma_pipeline.cu  k06_mma.cu  k07_mma_permute.cu  k08_mma_swizzle.cu
omp/: README.md  build.sh  correctness.c  dgemm_omp.h  main.c  run.sh
omp/src/: dgemm_omp_mkl.c  dgemm_omp_openblas.c  dgemm_omp_v1.c  dgemm_omp_v2.c
sgemm-cuda/: CMakeLists.txt  README.md  env.sh  gemm.cuh  main.cu  parse_result.py
sgemm-cuda/src/: gemm.cuh  utils.cu  utils.cuh
src/: dgemm_mkl.c  dgemm_mypack.c  dgemm_v1.c  dgemm_v2.c  dgemm_v3.c  dgemm_v4.c  dgemm_vec.c
(+10 files in other folders)
